--- a/src/OSRlibDemoAPI.csproj
+++ b/src/OSRlibDemoAPI.csproj
@@ -8,11 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
+    <PackageReference Include="osrlib.Core" Version="0.0.1-alpha" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\osrlib-dotnet\src\osrlib.Core\osrlib.Core.csproj" />
   </ItemGroup>
 
 </Project>
