CORS config + Newtonsoft JSON

--- a/src/OSRlibDemoAPI.csproj
+++ b/src/OSRlibDemoAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
     <PackageReference Include="osrlib.Core" Version="0.0.1-alpha" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
